--- a/.github/workflows/run-jar.yml
+++ b/.github/workflows/run-jar.yml
@@ -2,7 +2,7 @@ name: Run JAR exactly at 13:47:57 TR
 
 on:
   schedule:
-    - cron: '08 11 * * *' # Türkiye saatiyle 13:47:00
+    - cron: '13 11 * * *' # Türkiye saatiyle 13:47:00
   workflow_dispatch:
   
 jobs:
@@ -21,9 +21,9 @@ jobs:
 
       - name: Wait until 13:47:57 and run JAR
         run: |
-          echo "Started at: $(date)"
-          while [ "$(date -u +%H:%M:%S)" != "11:08:57" ]; do
-            sleep 0.2
+          for i in {1..7}
+          do
+            echo "Run #$i at $(date)"
+            java -jar test_project.jar
+            sleep 1
           done
-          echo "Running at exact second: $(date)"
-          java -jar test_project.jar
