--- a/.github/workflows/run-jar.yml
+++ b/.github/workflows/run-jar.yml
@@ -1,29 +1,30 @@
-name: Run JAR exactly at 13:47:57 TR
+name: Run JAR tam olarak 11:55:55 UTC'de çalıştır
 
 on:
   schedule:
-    - cron: '47 11 * * *' # Türkiye saatiyle 13:47:00
+    - cron: '55 11 * * *' # UTC saatiyle 11:55:55
   workflow_dispatch:
-  
+
 jobs:
   precise-jar-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Repo'yu al
         uses: actions/checkout@v3
 
-      - name: Setup Java
+      - name: Java'yı kur
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Wait until 13:47:57 and run JAR
+      - name: 11:55:55 UTC'yi bekle ve JAR'ı çalıştır
         run: |
-          for i in {1..7}
-          do
-            echo "Run #$i at $(date)"
-            java -jar test_project.jar
-            sleep 1
+          # Tam olarak 11:55:55 UTC'yi bekle
+          target_time="11:55:55"
+          while [[ "$(date +'%H:%M:%S')" != "$target_time" ]]; do
+            sleep 0.5
           done
+          echo "Çalıştırma zamanı: $(date)"
+          java -jar test_project.jar
