--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -2,7 +2,7 @@ name: Run JAR every hour
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Her saat başı (UTC)
+    - cron: '0 0 * * *'  # Her saat başı (UTC)
   workflow_dispatch:  # Manuel tetikleme için
 
 jobs:
