--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -1,8 +1,8 @@
-name: Run JAR every hour
+name: Run midnights
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Her saat başı (UTC)
+    - cron: '0 0 * * 1-5'  # Her saat başı (UTC)
   workflow_dispatch:  # Manuel tetikleme için
 
 jobs:
